unpackaged/main/default/objects/Observation_Form__c/Observation_Form__c.object-meta.xml
<CustomObject>
    <description>Observation Forms utilized for quality and performance.</description>
    <label>Observation Form</label>
    <nameField>
        <displayFormat>Observation-{0000}</displayFormat>
        <label>Observation Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observation Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>