unpackaged/main/default/objects/Observation_Form__c/fields/Ask_for_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Ask_for_Purchase_Order_Number__c</fullName>
    <inlineHelpText>All Divisions.</inlineHelpText>
    <label>Ask for Purchase Order Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>