unpackaged/main/default/objects/Observation_Form__c/fields/Auto_Fail__c.field-meta.xml
<CustomField>
    <fullName>Auto_Fail__c</fullName>
    <formula>IF( Customer_InappropriateHandling__c = TRUE ||  Disclosing_Customer_Data__c  = TRUE ||  Use_Of_Inappropriate_Language__c = TRUE ||  Obtain_Credit_Card_Info__c = TRUE  ||  Web_ID_Not_Obtained__c = TRUE  ||  Billing_Address_Not_Verified__c = TRUE, &quot;Failed&quot;, &quot;Passed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Fail</label>
    <type>Text</type>
</CustomField>