unpackaged/main/default/objects/Observation_Form__c/fields/Billing_Address_Not_Verified__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Not_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if answer is &quot;Yes.&quot;</inlineHelpText>
    <label>Billing Address Not Verified</label>
    <type>Checkbox</type>
</CustomField>