unpackaged/main/default/objects/Observation_Form__c/fields/Call_Handling_Skills_Total__c.field-meta.xml
<CustomField>
    <fullName>Call_Handling_Skills_Total__c</fullName>
    <formula>(IF( ISPICKVAL(  Use_of_Customer_Name__c , &quot;Pass&quot;) || ISPICKVAL(  Use_of_Customer_Name__c , &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(   Avoid_Long_Silences__c , &quot;Pass&quot;) || ISPICKVAL(  Avoid_Long_Silences__c , &quot;N/A&quot;) , 1, 0) + IF( ISPICKVAL(  Avoid_Filler_Words__c , &quot;Pass&quot;) || ISPICKVAL( Avoid_Filler_Words__c , &quot;N/A&quot;) , 1, 0) +  IF( ISPICKVAL(  Hold_Procedure__c , &quot;Pass&quot;)  ||  ISPICKVAL(  Hold_Procedure__c , &quot;N/A&quot;), 1, 0) +  IF( ISPICKVAL(  Talking_Over_Customer__c , &quot;Pass&quot;)  ||  ISPICKVAL(  Talking_Over_Customer__c , &quot;N/A&quot;)  , 1, 0)) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Handling Skills Total %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>