unpackaged/main/default/objects/Observation_Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case associated to Observation Form.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Observation Forms</relationshipLabel>
    <relationshipName>Observation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>