unpackaged/main/default/objects/Observation_Form__c/fields/Case_Intake_Channel__c.field-meta.xml
<CustomField>
    <fullName>Case_Intake_Channel__c</fullName>
    <formula>Case (Case__r.Channel__c, 
&quot;CalvinKlein.us&quot;, &quot;Ecommerce&quot;,
&quot;Calvin Klein Retail&quot;, &quot;Retail&quot;,
&quot;Tommy.com&quot;, &quot;Retail&quot;,
&quot;SpeedoUSA.com&quot;, &quot;Ecommerce&quot;,
&quot;Other Retailer&quot;, &quot;Wholesale&quot;,
&quot;VanHeusen.com&quot;, &quot;Ecommerce&quot;,
&quot;Van Heusen Retail&quot;,&quot;Retail&quot;,
&quot;Izod.com&quot;, &quot;Ecommerce&quot;, 
&quot;styleBureau.com&quot;, &quot;Retail&quot;, 
&quot;trueandco.com&quot;, &quot;Ecommerce&quot;,
&quot;CalvinKlein.ca&quot;, &quot;Ecommerce&quot;,
&quot;Speedo.com&quot;, &quot;Retail&quot;,
&quot;Warner.com&quot;, &quot;Ecommerce&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Intake Channel</label>
    <type>Text</type>
</CustomField>