unpackaged/main/default/objects/Observation_Form__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <formula>CASE (Case__r.Origin,
&quot;Email&quot;, &quot;Email&quot;,
&quot;Web&quot;, &quot;Web&quot;,
&quot;Phone&quot;, &quot;Phone&quot;,
&quot;Chat&quot;, &quot;Chat&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Origin</label>
    <type>Text</type>
</CustomField>