unpackaged/main/default/objects/Observation_Form__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <formula>Case__r.Owner:User.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>