unpackaged/main/default/objects/Observation_Form__c/fields/Closing_Statement__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement__c</fullName>
    <inlineHelpText>Closing Statement/Personalization of Brand Name</inlineHelpText>
    <label>Closing Statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>