unpackaged/main/default/objects/Observation_Form__c/fields/Closing_Total_Email__c.field-meta.xml
<CustomField>
    <fullName>Closing_Total_Email__c</fullName>
    <formula>(IF( ISPICKVAL(  Offer_Additional_Assistance__c, &quot;Pass&quot;) || ISPICKVAL(  Offer_Additional_Assistance__c, &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(  Transition_Statement__c, &quot;Pass&quot;) || ISPICKVAL(     Transition_Statement__c   , &quot;N/A&quot;) , 1, 0) + IF( ISPICKVAL(  Proper_Signature__c, &quot;Pass&quot;) || ISPICKVAL(  Proper_Signature__c   , &quot;N/A&quot;) , 1, 0)) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Total % (Email)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>