unpackaged/main/default/objects/Observation_Form__c/fields/Closing_Total_Phone__c.field-meta.xml
<CustomField>
    <fullName>Closing_Total_Phone__c</fullName>
    <formula>(IF( ISPICKVAL(  Offer_Additional_Assistance__c, &quot;Pass&quot;) || ISPICKVAL( Offer_Additional_Assistance__c, &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(   Closing_Statement__c , &quot;Pass&quot;) || ISPICKVAL(  Closing_Statement__c, &quot;N/A&quot;) , 1, 0) + IF( ISPICKVAL(  Proper_Disconnect__c , &quot;Pass&quot;) || ISPICKVAL( Proper_Disconnect__c, &quot;N/A&quot;), 1, 0)) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Total % (Phone)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>