unpackaged/main/default/objects/Observation_Form__c/fields/Customer_InappropriateHandling__c.field-meta.xml
<CustomField>
    <fullName>Customer_InappropriateHandling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if answer is &quot;Yes.&quot;</inlineHelpText>
    <label>Customer Inappropriate Handling</label>
    <type>Checkbox</type>
</CustomField>