unpackaged/main/default/objects/Observation_Form__c/fields/Customer_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inquiry__c</fullName>
    <label>Customer Inquiry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>