unpackaged/main/default/objects/Observation_Form__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date CSR dealt with the customer.</description>
    <formula>Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date CSR dealt with the customer.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>