unpackaged/main/default/objects/Observation_Form__c/fields/Detailed_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Explanation__c</fullName>
    <inlineHelpText>Detailed Explanation of Next Steps And/Or Policies.</inlineHelpText>
    <label>Detailed Explanation of Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>