unpackaged/main/default/objects/Observation_Form__c/fields/Disclosing_Customer_Data__c.field-meta.xml
<CustomField>
    <fullName>Disclosing_Customer_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disclosing Customer Data (Not The Customer). Check if answer is &quot;Yes.&quot;</description>
    <label>Disclosing Customer Data</label>
    <type>Checkbox</type>
</CustomField>