unpackaged/main/default/objects/Observation_Form__c/fields/Greeting_Total__c.field-meta.xml
<CustomField>
    <fullName>Greeting_Total__c</fullName>
    <formula>(IF( ISPICKVAL( State_Brand_Name__c, &quot;Pass&quot;) || ISPICKVAL(  State_Brand_Name__c  , &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(  State_Your_Name__c   , &quot;Pass&quot;) || ISPICKVAL(  State_Your_Name__c  , &quot;N/A&quot;) , 1, 0) + IF( ISPICKVAL(  Obtain_Customer_Name__c  , &quot;Pass&quot;) || ISPICKVAL(   Obtain_Customer_Name__c   , &quot;N/A&quot;) , 1, 0) +  IF( ISPICKVAL(   Offer_Ask__c   , &quot;Pass&quot;)  ||  ISPICKVAL(   Offer_Ask__c  , &quot;N/A&quot;)  , 1, 0) ) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Greeting Total %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>