unpackaged/main/default/objects/Observation_Form__c/fields/Handling_Skills_Total_Chat__c.field-meta.xml
<CustomField>
    <fullName>Handling_Skills_Total_Chat__c</fullName>
    <formula>(IF( ISPICKVAL(  Personalization__c , &quot;Pass&quot;) || ISPICKVAL(  Personalization__c  , &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(  Customization__c  , &quot;Pass&quot;) || ISPICKVAL(  Customization__c , &quot;N/A&quot;) , 1, 0) + IF( ISPICKVAL(   All_Questions__c  , &quot;Pass&quot;) || ISPICKVAL(  All_Questions__c  , &quot;N/A&quot;) , 1, 0) +  IF( ISPICKVAL(    Detailed_Explanation__c  , &quot;Pass&quot;)  ||  ISPICKVAL( Detailed_Explanation__c  , &quot;N/A&quot;)  , 1, 0) ) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handling Skills Total % (Chat)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>