unpackaged/main/default/objects/Observation_Form__c/fields/Obtain_Credit_Card_Info__c.field-meta.xml
<CustomField>
    <fullName>Obtain_Credit_Card_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Obtain Credit Card Information via Chat or E-mail. Check if answer is &quot;Yes.&quot;</inlineHelpText>
    <label>Obtain Credit Card Information</label>
    <type>Checkbox</type>
</CustomField>