unpackaged/main/default/objects/Observation_Form__c/fields/Offer_to_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Offer_to_Follow_Up__c</fullName>
    <inlineHelpText>If applicable.</inlineHelpText>
    <label>Offer to Follow Up w/ Customer by Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>