unpackaged/main/default/objects/Observation_Form__c/fields/Opening_Total_Chat__c.field-meta.xml
<CustomField>
    <fullName>Opening_Total_Chat__c</fullName>
    <formula>(IF( ISPICKVAL(  Proper_Greeting_with__c , &quot;Pass&quot;) || ISPICKVAL(  Proper_Greeting_with__c  , &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(  Proper_Spelling_of_Customer_Name__c   , &quot;Pass&quot;) || ISPICKVAL(  Proper_Spelling_of_Customer_Name__c   , &quot;N/A&quot;) , 1, 0) + IF( ISPICKVAL(  Thanking_Customer__c   , &quot;Pass&quot;) || ISPICKVAL(    Thanking_Customer__c   , &quot;N/A&quot;) , 1, 0) +  IF( ISPICKVAL( Apologize_to_Customer__c  , &quot;Pass&quot;)  ||  ISPICKVAL(  Apologize_to_Customer__c , &quot;N/A&quot;)  , 1, 0) ) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opening Total % (Chat)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>