unpackaged/main/default/objects/Observation_Form__c/fields/Opening_Total_Email__c.field-meta.xml
<CustomField>
    <fullName>Opening_Total_Email__c</fullName>
    <formula>(IF( ISPICKVAL( Proper_Greeting__c , &quot;Pass&quot;)  ||  ISPICKVAL(Proper_Greeting__c, &quot;N/A&quot;)  , 1, 0 ) +  IF( ISPICKVAL( Proper_Spelling_of_Cuustomer_Name_Email__c , &quot;Pass&quot;)  ||  ISPICKVAL( Proper_Spelling_of_Cuustomer_Name_Email__c , &quot;N/A&quot;)  , 1, 0) +  IF( ISPICKVAL( Thanking_Customer__c , &quot;Pass&quot;)  ||  ISPICKVAL(Thanking_Customer__c, &quot;N/A&quot;)  , 1, 0))  /  3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opening Total % (Email)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>