unpackaged/main/default/objects/Observation_Form__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>