unpackaged/main/default/objects/Observation_Form__c/fields/Order_Management_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Management_Total__c</fullName>
    <formula>(IF( ISPICKVAL(  Offer_to_Place_Order__c , &quot;Pass&quot;) || ISPICKVAL(  Offer_to_Place_Order__c  , &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(  Ask_for_Purchase_Order_Number__c , &quot;Pass&quot;) || ISPICKVAL( Ask_for_Purchase_Order_Number__c , &quot;N/A&quot;) , 1, 0)) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Management Total %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>