unpackaged/main/default/objects/Observation_Form__c/fields/Phone_Etiquette_Total__c.field-meta.xml
<CustomField>
    <fullName>Phone_Etiquette_Total__c</fullName>
    <formula>(IF( ISPICKVAL(  Tone_and_Warmth__c , &quot;Pass&quot;) || ISPICKVAL(   Tone_and_Warmth__c   , &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(   Empathy__c , &quot;Pass&quot;) || ISPICKVAL(  Empathy__c , &quot;N/A&quot;) , 1, 0) + IF( ISPICKVAL(  Apology__c , &quot;Pass&quot;) || ISPICKVAL( Apology__c , &quot;N/A&quot;) , 1, 0) +  IF( ISPICKVAL(  Verbal_Nods__c , &quot;Pass&quot;)  ||  ISPICKVAL(  Verbal_Nods__c , &quot;N/A&quot;), 1, 0) +  IF( ISPICKVAL(  Use_of_Positive_Words__c , &quot;Pass&quot;)  ||  ISPICKVAL(  Use_of_Positive_Words__c , &quot;N/A&quot;)  , 1, 0)) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Etiquette Total %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>