unpackaged/main/default/objects/Observation_Form__c/fields/Procedures_Total_Chat__c.field-meta.xml
<CustomField>
    <fullName>Procedures_Total_Chat__c</fullName>
    <formula>(IF( ISPICKVAL(  Correct_Information__c , &quot;Pass&quot;) || ISPICKVAL(  Correct_Information__c , &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(  Proper_Resolution__c , &quot;Pass&quot;) || ISPICKVAL(  Proper_Resolution__c , &quot;N/A&quot;) , 1, 0) + IF( ISPICKVAL(   Proper_Understanding_of_Issue__c , &quot;Pass&quot;) || ISPICKVAL(  Proper_Understanding_of_Issue__c , &quot;N/A&quot;) , 1, 0) +  IF( ISPICKVAL(  Provided_Options__c  , &quot;Pass&quot;)  ||  ISPICKVAL(  Provided_Options__c  , &quot;N/A&quot;), 1, 0) +  IF( ISPICKVAL(   Proper_Ticket_Coding__c , &quot;Pass&quot;)  ||  ISPICKVAL(   Proper_Ticket_Coding__c , &quot;N/A&quot;)  , 1, 0)) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedures Total % (Chat)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>