unpackaged/main/default/objects/Observation_Form__c/fields/Procedures_Total_Phone__c.field-meta.xml
<CustomField>
    <fullName>Procedures_Total_Phone__c</fullName>
    <formula>(IF( ISPICKVAL(  Proper_Resolution_and_Provided_Options__c , &quot;Pass&quot;) || ISPICKVAL(   Proper_Resolution_and_Provided_Options__c   , &quot;N/A&quot;) , 1, 0 ) + IF( ISPICKVAL(   Detailed_Explanation__c , &quot;Pass&quot;) || ISPICKVAL(  Detailed_Explanation__c   , &quot;N/A&quot;) , 1, 0) + IF( ISPICKVAL(  Proper_Ticket_Coding__c , &quot;Pass&quot;) || ISPICKVAL( Proper_Ticket_Coding__c , &quot;N/A&quot;) , 1, 0) +  IF( ISPICKVAL(  Proper_Ticket_Note_Taking__c , &quot;Pass&quot;)  ||  ISPICKVAL(  Proper_Ticket_Note_Taking__c , &quot;N/A&quot;), 1, 0) +  IF( ISPICKVAL(  Proper_PVH__c , &quot;Pass&quot;)  ||  ISPICKVAL(     Proper_PVH__c , &quot;N/A&quot;)  , 1, 0)) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedures Total % (Phone)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>